First/ec2.tf


resource "aws_instance" "instan1" {
  ami = data.aws_ami.linux1.id
  #instance_type          = var.instance_type
  instance_type = var.instance_type_list[0] #for list
  #instance_type           = var.instance_type_map["dev"] #for map       
  user_data              = file("${path.module}/app1-install.sh")
  vpc_security_group_ids = [aws_security_group.vpc-SG.name]
  key_name               = var.key-pair
  #vpc_security_group_ids = [aws_security_group.vpc-ssh.id, aws_security_group.vpc-web.id]
  count = 3

  tags = {
    Name = "First-EC2-${count.index}"
  }
}

/*
# Drawbacks of using count in this example
- Resource Instances in this case were identified using index numbers
instead of string values like actual subnet_id
- If an element was removed from the middle of the list,
every instance after that element would see its subnet_id value
change, resulting in more remote object changes than intended.
- Even the subnet_ids should be pre-defined or we need to get them again
using for_each or for using various datasources
- Using for_each gives the same flexibility without the extra churn.
*/
